fix: improve search icon size and centering
- Increase search icon size from default to 24px
- Add flexbox centering to search button
- Improve visual alignment of search icon

--- a/src/app/shared/components/search-bar/search-bar.component.scss
+++ b/src/app/shared/components/search-bar/search-bar.component.scss
@@ -65,8 +65,14 @@
     min-width: 44px;
     height: 44px;
     padding: 0 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     mat-icon {
+      font-size: 24px;
+      width: 24px;
+      height: 24px;
       margin-right: 0;
     }
 
