--- a/src/app/shared/components/search-bar/search-bar.component.scss
+++ b/src/app/shared/components/search-bar/search-bar.component.scss
@@ -64,16 +64,23 @@
     color: white;
     min-width: 44px;
     height: 44px;
-    padding: 0 16px;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
 
     mat-icon {
-      font-size: 24px;
-      width: 24px;
-      height: 24px;
+      font-size: 28px;
+      width: 28px;
+      height: 28px;
       margin-right: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      line-height: 1;
+      margin: 0 !important;
+      padding: 0 !important;
+      vertical-align: middle;
     }
 
     .search-button-text {
@@ -92,8 +99,8 @@
   }
 
   .clear-button {
-    width: 24px;
-    height: 24px;
+    width: 28px;
+    height: 28px;
     display: flex;
     align-items: center;
     justify-content: center;
